@@ -140,6 +140,7 @@ import org.apache.tinkerpop.gremlin.structure.util.reference.ReferenceEdge;
 import org.apache.tinkerpop.gremlin.structure.util.reference.ReferenceProperty;
 import org.apache.tinkerpop.gremlin.structure.util.reference.ReferenceVertex;
 import org.apache.tinkerpop.gremlin.structure.util.reference.ReferenceVertexProperty;
+import org.apache.tinkerpop.gremlin.util.DatetimeHelper;
 import org.apache.tinkerpop.gremlin.util.Gremlin;
 import org.apache.tinkerpop.gremlin.util.TimeUtil;
 import org.apache.tinkerpop.gremlin.util.function.Lambda;
@@ -325,6 +326,11 @@ public final class CoreImports {
         uniqueMethods(Computer.class).forEach(METHOD_IMPORTS::add);
         uniqueMethods(TimeUtil.class).forEach(METHOD_IMPORTS::add);
         uniqueMethods(Lambda.class).forEach(METHOD_IMPORTS::add);
+        try {
+            METHOD_IMPORTS.add(DatetimeHelper.class.getMethod("datetime", String.class));
+        } catch (Exception ex) {
+            throw new IllegalStateException("Could not load datetime() function to imports");
+        }
 
         ///////////
         // ENUMS //
