@@ -41,6 +41,7 @@ import org.apache.tinkerpop.gremlin.util.function.Lambda;
 import org.junit.Test;
 
 import java.sql.Timestamp;
+import java.time.ZonedDateTime;
 import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
@@ -49,6 +50,7 @@ import java.util.LinkedHashMap;
 import java.util.UUID;
 import java.util.function.Function;
 
+import static java.time.ZoneOffset.UTC;
 import static org.apache.tinkerpop.gremlin.process.traversal.AnonymousTraversalSource.traversal;
 import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.hasLabel;
 import static org.junit.Assert.assertEquals;
@@ -153,6 +155,17 @@ public class GroovyTranslatorTest {
     @Test
     public void shouldTranslateColumn() {
         assertTranslation("Column.keys", Column.keys);
+    }
+
+    @Test
+    public void shouldTranslateDateUsingDatetimeFunction() {
+        final Translator.ScriptTranslator t = GroovyTranslator.of("g",
+                new GroovyTranslator.LanguageTypeTranslator(false));
+        final Date datetime = Date.from(ZonedDateTime.of(2018, 03, 22, 00, 35, 44, 741000000, UTC).toInstant());
+        final Date date = Date.from(ZonedDateTime.of(2018, 03, 22, 0, 0, 0, 0, UTC).toInstant());
+        assertEquals("g.inject(datetime('2018-03-22T00:00:00Z'),datetime('2018-03-22T00:35:44.741Z'))",
+                t.translate(g.inject(date, datetime)).getScript());
+
     }
 
     @Test
